emmit ticket using ticket category id